objects/Case_Confidential_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Case__r.AccountId ,  Case__r.Account.Name, &apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Confidential Information</relationshipLabel>
        <relationshipName>Case_Confidential_Informations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <formula>Case__r.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Case__r.Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Case__r.ContactId, Case__r.Contact.FirstName+&apos; &apos;+Case__r.Contact.LastName,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Case__r.Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+OwnerId, Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Case Confidential Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCI-{0000000}</displayFormat>
        <label>Case Confidential Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Confidential Information</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Confidential_Case_Team__c</fullName>
        <label>Confidential Case Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>Only_Case_Owner_can_create_CCI</fullName>
        <active>true</active>
        <description>Test</description>
        <errorConditionFormula>AND(
ISNEW(), 
OwnerId &lt;&gt;  Case__r.OwnerId, NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),  NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c))</errorConditionFormula>
        <errorMessage>Only Case owner is able to Create Case Confidential Information</errorMessage>
    </validationRules>
</CustomObject>